--- a/angular.json
+++ b/angular.json
@@ -72,9 +72,13 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "../node_modules/font-awesome/css/font-awesome.css",
+              "styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "../node_modules/jquery/dist/jquery.js",
+              "../node_modules/popper.js/dist/umd/popper.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
