--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -73,7 +73,7 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "../node_modules/font-awesome/css/font-awesome.css",
-              "styles.css"
+              "styles.scss"
             ],
             "scripts": [
               "../node_modules/jquery/dist/jquery.js",
